save all changes

--- a/web_project/dieseshop/templates/base.html
+++ b/web_project/dieseshop/templates/base.html
@@ -48,11 +48,16 @@
 </header>
 
   <section class="image">
-      <div class="container">
+      <div class="container" style="color: #8000FF;">
         <div class="row">
           <div class="col-md-4">
             <div class="mt-5">
-               <h3 class="col-success"> Buy and | Sell Any Product </h3>
+               <h3 class="col-success"> Buy and Sell Any Product </h3>
+               <h2 class="col-success"> With Fastest and Safest  </h2>
+               <h2 class="col-success"> Delivery to Any Over </h2>
+               <h1 class="col-success">  World  </h1>
+               <h1>Sign up Now and Start </h1>
+               <button class="btn btn-success"> Sign up Now </button>
             </div>
           </div>
             <div class="col-md-4">
@@ -107,7 +112,7 @@
 
 <!-- Footer -->
 <footer class="page-footer font-small blue-grey  lighten-5" style="background-color: rgb(211, 76, 76);">
-  <div style="background-color:  greenyellow ">
+  <div style="background-color: greenyellow">
     <div class="container">
 
       <!-- Grid row-->
@@ -236,7 +241,7 @@
 
   </div>
   <!-- Footer Links -->
-<div class="border-bottom" style="background: grey ; color: white ">
+<div class="border-bottom" style="background: #80FF00  ; color: white ">
   <!-- Copyright -->
   <div class="footer-copyright text-center text-black-50 py-3">© All Copyright Registered :
     <a class="light-grey-text"> DieseShop.com </a>
