--- a/web_project/dieseshop/templates/home.html
+++ b/web_project/dieseshop/templates/home.html
@@ -1,13 +1,120 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div class="container mt-4">
-  <div class="row">
-    <div class="col-md-4">
-      Items
+
+<div class="container mt-5">
+<div class="card-deck">
+  <div class="card">
+    <img src="static\images\necklase.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <button class="btn btn-success"> 99.99 </button>
+          </div>
+          <div class="col-md-6">
+             <button class="btn btn-danger"> Add to Card </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="card">
+    <img src="static\images\bag.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+             <button class="btn btn-success">33.99 MAD </button>
+          </div>
+          <div class="col-md-6">
+              <button class="btn btn-danger"> Add to card </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="card">
+    <img src="static\images\awsome.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action. </p>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+              <button class="btn btn-success"> 29,30 MAD</button>
+          </div>
+           <div class="col-md-6">
+              <button class="btn btn-danger"> Add to Card </button>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
+</div>
+
+<!-- Second Card -->
+<div class="container mt-5">
+<div class="card-deck">
+  <div class="card">
+    <img src="static\images\necklase.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <button class="btn btn-success"> 99.99 </button>
+          </div>
+          <div class="col-md-6">
+             <button class="btn btn-danger"> Add to Card </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="card">
+    <img src="static\images\bag.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+             <button class="btn btn-success">33.99 MAD </button>
+          </div>
+          <div class="col-md-6">
+              <button class="btn btn-danger"> Add to card </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="card">
+    <img src="static\images\awsome.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action. </p>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+              <button class="btn btn-success"> 29,30 MAD</button>
+          </div>
+           <div class="col-md-6">
+              <button class="btn btn-danger"> Add to Card </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+<!-- the end of Second Card ! -->
 
 
 {% endblock content %}
