--- a/web_project/dieseshop/templates/product.html
+++ b/web_project/dieseshop/templates/product.html
@@ -1,13 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
 
-  <div class="card">
-    <img class="card-img-top" src="..." alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-    </div>
-  </div>
+  <p> Product </p>
 
 {% endblock content %}
