--- a/web_project/dieseshop/templates/base.html
+++ b/web_project/dieseshop/templates/base.html
@@ -14,40 +14,36 @@
     </head>
 <body>
   <header>
-    <nav class="navbar  navbar-expand-lg  navbar-dark navbar-bg-lg  scrolling-navbar">
-    <a class="navbar-brand" href="{% url 'home' %}"> <img src="" alt="" width="40px">      Dieseshop </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="{% url 'home' %}"> Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href=""> Productivity </a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href=""> Blogs </a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href=""> About </a>
-        </li>
-      </ul>
-      <ul class="navbar-nav ">
-           <li class="nav-item active "><a class="nav-link" href=""> Card </a></li>
-          <li class="nav-item active"><a class="nav-link" href="">  Register </a>
-          </li>
-      </ul>
+    <nav class="navbar navbar-expand-md navbar-light bg-dark">
+      <a href="#" class="navbar-brand"><i class="fas fa-store text-warning fa-2x"></i></a>
+      <button type="button" class="navbar-toggler bg-light" name="button" data-toggle="collapse" data-target="#nav"> <span class="navbar-toggler-icon"></span></button>
+      <div class="collapse navbar-collapse justify-content-between" id="nav">
       <ul class="navbar-nav">
-        <li class="nav-item active"><a class="nav-link" href=""> Sign Up  </a></li>
+      <li class="nav-item"><a class="nav-link text-light text-uppercase font-weight-bold px-3" href="">Dieseshop</a></li>
+      <li class="nav-item dropdown"><a class="nav-link text-light text-uppercase font-weight-bold px-3 dropdown-toggle" data-toggle="dropdown"  href=""> Categeries </a>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" href="">Accezssoires</a>
+        <a class="dropdown-item" href="">clothes</a>
+        <a class="dropdown-item" href="">Comupters</a>
+        <a class="dropdown-item" href="">Phones</a>
+      </div>
+      </li>
+      <li class="nav-item"><a class="nav-link text-light  text-uppercase font-weight-bold px-3" href=""> about </a></li>
       </ul>
-    </div>
-  </nav>
-</header>
+      <form class="form-inline ml-3">
+        <div class="input-group">
+            <input type="text" class="form-control" placeholder="search">
+        </div>
+        <div class="input-group-append">
+          <button type="button" class="btn btn-warning" name="button"><i class="fas fa-search"></i></button>
+        </div>
+      </form>
+      </div>
+    </nav>
+  </header>
 
-  <section class="image">
+  <!--
+    <section class="image">
       <div class="container" style="color: #8000FF;">
         <div class="row">
           <div class="col-md-4">
@@ -61,15 +57,15 @@
             </div>
           </div>
             <div class="col-md-4">
-              <!--Empty column-->
+              
             </div>
             <div class="col-md-4">
-                <!--Empty column-->
+               
             </div>
         </div>
       </div>
   </section>
-
+  -->
 
     {% block content %}
   
@@ -111,8 +107,8 @@
 
 
 <!-- Footer -->
-<footer class="page-footer font-small blue-grey  lighten-5" style="background-color: rgb(211, 76, 76);">
-  <div style="background-color: greenyellow">
+<footer class="page-footer font-small blue-grey  lighten-5" style="background-color: black;">
+  <div style="background-color: grey">
     <div class="container">
 
       <!-- Grid row-->
@@ -241,7 +237,7 @@
 
   </div>
   <!-- Footer Links -->
-<div class="border-bottom" style="background: #80FF00  ; color: white ">
+<div class="border-bottom" style="background: grey ; color: white ">
   <!-- Copyright -->
   <div class="footer-copyright text-center text-black-50 py-3">© All Copyright Registered :
     <a class="light-grey-text"> DieseShop.com </a>
