--- a/web_project/dieseshop/templates/base.html
+++ b/web_project/dieseshop/templates/base.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="{% static 'css/bootsrtap.min.css' %}" >
         <link rel="stylesheet" href="{% static 'css/main.css' %}">
+         <link rel="stylesheet" href="{% static 'css/cart.css' %}">
         <link rel="shortcut" href="{% static 'image/logo.png' %}">
         <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
         <title> DieseShop </title>
@@ -44,7 +45,25 @@
   
 
     {% endblock content %}
-
+      
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
 
 
    {% include 'footer.html' %}
