--- a/web_project/dieseshop/templates/navbar.html
+++ b/web_project/dieseshop/templates/navbar.html
@@ -6,15 +6,15 @@
       <ul class="navbar-nav">
       <li class="nav-item"><a class="nav-link text-light text-uppercase font-weight-bold px-3" href="{% url 'home' %}"> Dieseshop </a></li>
       <li class="nav-item dropdown"><a class="nav-link text-light text-uppercase font-weight-bold px-3 dropdown-toggle" data-toggle="dropdown"  href=""> Categeries </a>
-      <div class="dropdown-menu">
+      <div class="dropdown-menu bg-warning">
         <a class="dropdown-item" href="{% url 'home' %}"> All products </a>
         {% for category in links %}
         <a class="dropdown-item" href="{{category.get_url}}">{{category.name}}</a>
         {% endfor %}
       </div>
       </li>
-      <li class="nav-item"><a class="nav-link text-light  text-uppercase font-weight-bold px-3" href=""> Product </a></li>
-      <li class="nav-item"><a class="nav-link text-light  text-uppercase font-weight-bold px-3" href="{% url 'about' %}"> About </a></li>
+      <li class="nav-item"><a class="nav-link text-light  text-uppercase font-weight-bold px-3" href="{% url 'cart' %}"> Cart </a></li>
+      <li class="nav-item"><a class="nav-link text-light  text-uppercase font-weight-bold px-3" href=""> About </a></li>
       </ul>
       <form class="form-inline ml-3">
         <div class="input-group">
