--- a/web_project/dieseshop/templates/product.html
+++ b/web_project/dieseshop/templates/product.html
@@ -1,13 +1,10 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-
-
-
 <div class="container py-5">
   <div class="row mb-5">
      <div class="col-10 mx-auto col-md-6 my-5">
-        <img src="{{product.image.url}}" alt="">
+        <img src="{{product.image.url}}" width="350" height="350" alt="">
      </div>
      <div class="col-10 mx-auto col-md-6 my-5">
         <h3 class="product-title"> {{product.name}} </h3>
