--- a/web_project/dieseshop/templates/navbar.html
+++ b/web_project/dieseshop/templates/navbar.html
@@ -13,8 +13,13 @@
         {% endfor %}
       </div>
       </li>
-      <li class="nav-item"><a class="nav-link text-light  text-uppercase font-weight-bold px-3" href="{% url 'cart' %}"> Cart </a></li>
-      <li class="nav-item"><a class="nav-link text-light  text-uppercase font-weight-bold px-3" href=""> About </a></li>
+       <li class="nav-item"><a class="nav-link text-light  text-uppercase font-weight-bold px-3" href=""> About </a></li>
+       {% if item_count > 0 %}
+      <li class="nav-item"><a class="nav-link text-light  text-uppercase font-weight-bold px-3" href="{% url 'cart_details' %}">
+        <i class="fas fa-shopping-cart"></i>({{item_count}})
+      </a>
+      </li>
+      {% endif %}
       </ul>
       <form class="form-inline ml-3">
         <div class="input-group">
