--- a/web_project/dieseshop/templates/product.html
+++ b/web_project/dieseshop/templates/product.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block title %}
+product
+{% endblock title %}
+
 {% block content %}
 <div class="container py-5">
   <div class="row mb-5">
@@ -21,7 +25,9 @@
          {% if product.stock <= 0 %}
         <p class="text-justify product-text"> Out of the stack </p>
          {% else %}
+         <a href="{% url 'add_cart' product.id %}">
          <p class="btn btn-success btn-active"> Add to Card  </p>
+         </a>
          {% endif %}
      </div>
   </div>
