--- a/web_project/dieseshop/templates/navbar.html
+++ b/web_project/dieseshop/templates/navbar.html
@@ -13,7 +13,31 @@
         {% endfor %}
       </div>
       </li>
-       <li class="nav-item"><a class="nav-link text-light  text-uppercase font-weight-bold px-3" href=""> About </a></li>
+       <li class="nav-item"><a class="nav-link text-light  text-uppercase font-weight-bold px-3" href=""> About </a>
+       </li>
+       {% if request.user.is_authenticated and request.user.first_name %}
+       <li class="nav-item dropdown">
+         <a class="nav-link text-light  text-uppercase font-weight-bold px-3 dropdown-toggle"  data-toggle="dropdown" href=""> welcome {{ request.user.first_name }}
+         <i class="fas fa-user circle"></i>
+       </a>
+        <div class="dropdown-menu bg-warning">
+        <a class="dropdown-item" href="{% url 'dashbord' %}"> Dashbord </a>
+      </div>
+       </li>
+        <li class="nav-item"><a class="nav-link text-light  text-uppercase font-weight-bold px-3" href="{% url 'signout' %}"> Sing out
+         <i class="fas fa-user-alt"></i>
+       </a>
+       </li>
+       {% else %}
+        <li class="nav-item"><a class="nav-link text-light  text-uppercase font-weight-bold px-3" href="{% url 'signup' %}"> Sing up
+         <i class="fas fa-user-plus"></i>
+       </a>
+       </li>
+        <li class="nav-item"><a class="nav-link text-light  text-uppercase font-weight-bold px-3" href="{% url 'signin' %}"> Sing in
+         <i class="fas fa-sign-in-alt"></i>
+       </a>
+       </li>
+       {% endif %}
        {% if item_count > 0 %}
       <li class="nav-item"><a class="nav-link text-light  text-uppercase font-weight-bold px-3" href="{% url 'cart_details' %}">
         <i class="fas fa-shopping-cart"></i>({{item_count}})
@@ -21,12 +45,12 @@
       </li>
       {% endif %}
       </ul>
-      <form class="form-inline ml-3">
+      <form class="form-inline ml-3" action="{% url 'search' %}" method="GET">
         <div class="input-group">
-            <input type="text" class="form-control" placeholder="search">
+            <input type="text" name="title" class="form-control" placeholder="search">
         </div>
         <div class="input-group-append">
-          <button type="button" class="btn btn-warning" name="button"><i class="fas fa-search"></i></button>
+          <button type="submit" class="btn btn-warning"><i class="fas fa-search"></i></button>
         </div>
       </form>
       </div>
